# Lima-camera-dhyana

./: .gitignore  .gitlab-ci.yml  .project  CMakeCache.txt  CMakeLists.txt  Dhyana 95_PID6405.xml  Makefile  README.md  cmake_install.cmake  dhyana-config-version.cmake  dhyana-config.cmake  pom.xml  pom_64_Win7_shared.xml
cmake/: project-config.cmake.in
conda/camera/: meta.yaml
conda/tango/: meta.yaml
dhyana/: project_version.h
doc/: index.rst  tango.rst
include/: DhyanaBinCtrlObj.h  DhyanaCamera.h  DhyanaCompatibility.h  DhyanaDetInfoCtrlObj.h  DhyanaInterface.h  DhyanaRoiCtrlObj.h  DhyanaSyncCtrlObj.h  DhyanaTimer.h
python/: __init__.py
script/: dhyana.cpp  dhyanalima  dhyanalima.cpp
sdk/etc/: tuusb.conf
sdk/include/: TUCamApi.h  TUDefine.h
sdk/lib/el7/x86_64/: libTUCam.so.1.0.0
sdk/msvc/include/: TUCamApi.h  TUDefine.h
sdk/msvc/lib/x64/: TUCam.lib
sdk/msvc/lib/x86/: TUCam.lib
sip/: DhyanaCamera.sip  DhyanaInterface.sip
src/: DhyanaBinCtrlObj.cpp  DhyanaCamera.cpp  DhyanaDetInfoCtrlObj.cpp  DhyanaInterface.cpp  DhyanaRoiCtrlObj.cpp  DhyanaSyncCtrlObj.cpp  DhyanaTimer.cpp
tango/: CMakeLists.txt  Dhyana.py
